fix testimonials on mobile

--- a/src/assets/css/scss/block/_partner.scss
+++ b/src/assets/css/scss/block/_partner.scss
@@ -7,7 +7,6 @@
   flex-wrap: wrap;
 
   img {
-    margin: 16px 24px;
     max-width: 100%;
   }
 
